--- a/index.html
+++ b/index.html
@@ -16,50 +16,113 @@
   <script src="https://kit.fontawesome.com/9b1e3e940f.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <header>
+    <div>
+      <img src="images/logo.svg" alt="">
+    </div>
+    <div>
+      <button class="btn btn-primary">Try It Free</button>
+    </div>
+  </header>
 
-  Try It Free
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h1>Build The Community Your Fans Will Love</h1>
+        <p>
+          Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+          Create connections with your users as you engage in genuine discussion.
+        </p>
+        <button class="btn btn-primary">Get Started For Free</button>
+      </div>
+      <div class="col">
+        <img src="images/illustration-mockups.svg" alt="">
+      </div>
+    </div>
+  </div>
+  
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h2>Grow Together</h2>
+        <p>
+          Generate meaningful discussions with your audience and build a strong, loyal community.
+          Think of the insightful conversations you miss out on with a feedback form.
+        </p>
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="col">
+        <h2>Flowing Conversations</h2>
+        <p>
+          You wouldn't paginate a conversation in real life, so why do it online? Our threads
+          have just-in-time loading for a more natural flow.
+        </p>
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="col">
+        <h2>Your Users</h2>
+        <p>
+          It takes no time at all to integrate Huddle with your app's authentication solution.
+          This means, once signed in to your app, your users can start chatting immediately.
+        </p>
+      </div>
+    </div>
+  </div>
 
-  Build The Community Your Fans Will Love
+  <div class="row">
+    <div class="col">
+      <h1>Ready To Build Your Community?</h1>
+      <button class="btn btn-primary">Get Started For Free</button>
+    </div>
+  </div>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="images/logo.svg" alt="">
+        <p>
+          <img src="images/icon-location.svg" alt="">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua
+        </p>
+        <p>
+          <img src="images/icon-phone.svg" alt="">
+          +1-543-123-4567
+        </p>
+        <p>
+          <img src="images/icon-email.svg" alt="">
+          example@huddle.com
+        </p>
+      </div>
 
-  Get Started For Free
+      <div class="col">
+        <p>About Us</p>
+        <p>What We Do</p>
+        <p>FAQ</p>
+      </div>
 
-  Grow Together
+      <div class="col">
+        <p>Career</p>
+        <p>Blog</p>
+        <p>Contact Us</p>
+      </div>
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-
-  Flowing Conversations
-
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
-
-  Your Users
-
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-  incididunt ut labore et dolore magna aliqua
-
-  +1-543-123-4567
-  example@huddle.com
-
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
-
-  &copy; Copyright 2018 Huddle. All rights reserved.
+      <div class="col">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        &copy; Copyright 2018 Huddle. All rights reserved.
+      </div>
+    </div>
+  </div>
 
   <footer>
     <p class="attribution">
