Add class to html elements

--- a/index.html
+++ b/index.html
@@ -15,33 +15,31 @@
   <!--  Font Awesome  -->
   <script src="https://kit.fontawesome.com/9b1e3e940f.js" crossorigin="anonymous"></script>
 </head>
-<body>
-  <header>
+<body class="body">
+  <header class="header">
     <div>
-      <img src="images/logo.svg" alt="">
-    </div>
-    <div>
-      <button class="btn btn-primary">Try It Free</button>
+      <img class="top-logo" src="images/logo.svg" alt="">
+      <button class="btn btn-primary try-it-free">Try It Free</button>
     </div>
   </header>
 
-  <div class="container">
+  <div class="container top-container">
     <div class="row">
       <div class="col">
         <h1>Build The Community Your Fans Will Love</h1>
-        <p>
+        <p class="intro">
           Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
           Create connections with your users as you engage in genuine discussion.
         </p>
-        <button class="btn btn-primary">Get Started For Free</button>
+        <button class="btn btn-primary btn-get-started">Get Started For Free</button>
       </div>
-      <div class="col">
+      <div class="col right-mockup">
         <img src="images/illustration-mockups.svg" alt="">
       </div>
     </div>
   </div>
   
-  <div class="container">
+  <div class="container middle-container">
     <div class="row">
       <div class="col">
         <h2>Grow Together</h2>
@@ -76,14 +74,14 @@
   <div class="row">
     <div class="col">
       <h1>Ready To Build Your Community?</h1>
-      <button class="btn btn-primary">Get Started For Free</button>
+      <button class="btn btn-primary btn-get-started">Get Started For Free</button>
     </div>
   </div>
 
-  <div class="container">
+  <div class="container bottom-container">
     <div class="row">
       <div class="col">
-        <img src="images/logo.svg" alt="">
+        <img class="bottom-logo" src="images/logo.svg" alt="">
         <p>
           <img src="images/icon-location.svg" alt="">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
