--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <!--  Font Awesome  -->
   <script src="https://kit.fontawesome.com/9b1e3e940f.js" crossorigin="anonymous"></script>
+  <!--  Stylesheet  -->
+  <link rel="stylesheet" href="styles/style.css">
+
 </head>
 <body class="body">
   <header class="header">
