Change top and bottom container to fluid

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
   </header>
 
-  <div class="container top-container">
+  <div class="container-fluid top-container">
     <div class="row">
       <div class="col">
         <h1>Build The Community Your Fans Will Love</h1>
@@ -81,7 +81,7 @@
     </div>
   </div>
 
-  <div class="container bottom-container">
+  <div class="container-fluid bottom-container">
     <div class="row">
       <div class="col">
         <img class="bottom-logo" src="images/logo.svg" alt="">
