--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
 
 </head>
 <body class="body">
-  <header class="header">
-    <div>
-      <img class="top-logo" src="images/logo.svg" alt="">
-      <button class="btn btn-primary try-it-free">Try It Free</button>
-    </div>
-  </header>
-
   <div class="container-fluid top-container">
     <div class="row">
       <div class="col">
+            <img class="top-logo" src="images/logo.svg" alt="">
+      </div>
+      <div class="col">
+        <button class="btn btn-primary try-it-free">Try It Free</button>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col top-left-column">
         <h1>Build The Community Your Fans Will Love</h1>
         <p class="intro">
           Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
@@ -36,7 +38,7 @@
         </p>
         <button class="btn btn-primary btn-get-started">Get Started For Free</button>
       </div>
-      <div class="col right-mockup">
+      <div class="col top-right-column">
         <img src="images/illustration-mockups.svg" alt="">
       </div>
     </div>
@@ -44,7 +46,7 @@
   
   <div class="container middle-container">
     <div class="row">
-      <div class="col">
+      <div class="col middle-page-col">
         <h2>Grow Together</h2>
         <p>
           Generate meaningful discussions with your audience and build a strong, loyal community.
@@ -54,7 +56,7 @@
     </div>
     
     <div class="row">
-      <div class="col">
+      <div class="col middle-page-col">
         <h2>Flowing Conversations</h2>
         <p>
           You wouldn't paginate a conversation in real life, so why do it online? Our threads
@@ -64,7 +66,7 @@
     </div>
     
     <div class="row">
-      <div class="col">
+      <div class="col middle-page-col">
         <h2>Your Users</h2>
         <p>
           It takes no time at all to integrate Huddle with your app's authentication solution.
