--- a/index.html
+++ b/index.html
@@ -46,32 +46,41 @@
   
   <div class="container middle-container">
     <div class="row">
-      <div class="col middle-page-col">
+      <div class="col left-middle-page-col">
         <h2>Grow Together</h2>
         <p>
           Generate meaningful discussions with your audience and build a strong, loyal community.
           Think of the insightful conversations you miss out on with a feedback form.
         </p>
       </div>
+      <div class="col right-middle-page-col">
+        <img src="images/illustration-grow-together.svg" alt="">
+      </div>
     </div>
     
     <div class="row">
-      <div class="col middle-page-col">
+      <div class="col left-middle-page-col">
         <h2>Flowing Conversations</h2>
         <p>
           You wouldn't paginate a conversation in real life, so why do it online? Our threads
           have just-in-time loading for a more natural flow.
         </p>
       </div>
+      <div class="col right-middle-page-col">
+        <img src="images/illustration-flowing-conversation.svg" alt="">
+      </div>
     </div>
     
     <div class="row">
-      <div class="col middle-page-col">
+      <div class="col left-middle-page-col">
         <h2>Your Users</h2>
         <p>
           It takes no time at all to integrate Huddle with your app's authentication solution.
           This means, once signed in to your app, your users can start chatting immediately.
         </p>
+      </div>
+      <div class="col right-middle-page-col">
+        <img src="images/illustration-your-users.svg" alt="">
       </div>
     </div>
   </div>
