Style Middle container

--- a/index.html
+++ b/index.html
@@ -43,43 +43,43 @@
       </div>
     </div>
   </div>
-  
+  <!--  Middle Container  -->
   <div class="container middle-container">
-    <div class="row">
-      <div class="col left-middle-page-col">
+    <div class="row middle-row">
+      <div class="col middle-txt-col">
         <h2>Grow Together</h2>
         <p>
           Generate meaningful discussions with your audience and build a strong, loyal community.
           Think of the insightful conversations you miss out on with a feedback form.
         </p>
       </div>
-      <div class="col right-middle-page-col">
+      <div class="col grow-img">
         <img src="images/illustration-grow-together.svg" alt="">
       </div>
     </div>
-    
-    <div class="row">
-      <div class="col left-middle-page-col">
+
+    <div class="row middle-row">
+      <div class="col flowing-img">
+        <img src="images/illustration-flowing-conversation.svg" alt="">
+      </div>
+      <div class="col middle-txt-col">
         <h2>Flowing Conversations</h2>
         <p>
           You wouldn't paginate a conversation in real life, so why do it online? Our threads
           have just-in-time loading for a more natural flow.
         </p>
       </div>
-      <div class="col right-middle-page-col">
-        <img src="images/illustration-flowing-conversation.svg" alt="">
-      </div>
     </div>
     
-    <div class="row">
-      <div class="col left-middle-page-col">
+    <div class="row middle-row">
+      <div class="col middle-txt-col">
         <h2>Your Users</h2>
         <p>
           It takes no time at all to integrate Huddle with your app's authentication solution.
           This means, once signed in to your app, your users can start chatting immediately.
         </p>
       </div>
-      <div class="col right-middle-page-col">
+      <div class="col users-img">
         <img src="images/illustration-your-users.svg" alt="">
       </div>
     </div>
@@ -91,7 +91,7 @@
       <button class="btn btn-primary btn-get-started">Get Started For Free</button>
     </div>
   </div>
-
+  <!--  Bottom Container  -->
   <div class="container-fluid bottom-container">
     <div class="row">
       <div class="col">
@@ -135,7 +135,7 @@
       </div>
     </div>
   </div>
-
+  <!--  Footer Section  -->
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
