Add logo2.svg, style cta div and bottom container

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
       </div>
     </div>
   </div>
-
-  <div class="row">
-    <div class="col">
+  <!--  Call-to-action  -->
+  <div class="row cta-row">
+    <div class="col cta-col">
       <h1>Ready To Build Your Community?</h1>
       <button class="btn btn-primary btn-get-started">Get Started For Free</button>
     </div>
@@ -95,7 +95,7 @@
   <div class="container-fluid bottom-container">
     <div class="row">
       <div class="col">
-        <img class="bottom-logo" src="images/logo.svg" alt="">
+        <img class="bottom-logo" src="images/logo2.svg" alt="">
         <p>
           <img src="images/icon-location.svg" alt="">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
