--- a/index.html
+++ b/index.html
@@ -96,34 +96,40 @@
     <div class="row">
       <div class="col">
         <img class="bottom-logo" src="images/logo2.svg" alt="">
-        <p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 info-section">
+        <div>
           <img src="images/icon-location.svg" alt="">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua
-        </p>
-        <p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua
+          </p>
+        </div>
+        <div>
           <img src="images/icon-phone.svg" alt="">
-          +1-543-123-4567
-        </p>
-        <p>
+          <p>+1-543-123-4567</p>
+        </div>
+        <div>
           <img src="images/icon-email.svg" alt="">
-          example@huddle.com
-        </p>
+          <p>example@huddle.com</p>
+        </div>
       </div>
 
-      <div class="col">
+      <div class="col-md-2 about-us">
         <p>About Us</p>
         <p>What We Do</p>
         <p>FAQ</p>
       </div>
 
-      <div class="col">
+      <div class="col-md-2 career">
         <p>Career</p>
         <p>Blog</p>
         <p>Contact Us</p>
       </div>
 
-      <div class="col">
+      <div class="col-md-2 icons">
         <i class="fab fa-facebook-f"></i>
         <i class="fab fa-twitter"></i>
         <i class="fab fa-instagram"></i>
