Format and style footer section and attribution

--- a/index.html
+++ b/index.html
@@ -91,62 +91,62 @@
       <button class="btn btn-primary btn-get-started">Get Started For Free</button>
     </div>
   </div>
-  <!--  Bottom Container  -->
-  <div class="container-fluid bottom-container">
-    <div class="row">
-      <div class="col">
-        <img class="bottom-logo" src="images/logo2.svg" alt="">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4 info-section">
-        <div>
-          <img src="images/icon-location.svg" alt="">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua
-          </p>
-        </div>
-        <div>
-          <img src="images/icon-phone.svg" alt="">
-          <p>+1-543-123-4567</p>
-        </div>
-        <div>
-          <img src="images/icon-email.svg" alt="">
-          <p>example@huddle.com</p>
-        </div>
-      </div>
-
-      <div class="col-md-2 about-us">
-        <p>About Us</p>
-        <p>What We Do</p>
-        <p>FAQ</p>
-      </div>
-
-      <div class="col-md-2 career">
-        <p>Career</p>
-        <p>Blog</p>
-        <p>Contact Us</p>
-      </div>
-
-      <div class="col-md-2 icons">
-        <i class="fab fa-facebook-f"></i>
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-instagram"></i>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        &copy; Copyright 2018 Huddle. All rights reserved.
-      </div>
-    </div>
-  </div>
   <!--  Footer Section  -->
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+    <!--  Bottom Container  -->
+    <div class="container-fluid bottom-container">
+      <div class="row">
+        <div class="col">
+          <img class="bottom-logo" src="images/logo2.svg" alt="">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 info-section">
+          <div>
+            <img src="images/icon-location.svg" alt="">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua
+            </p>
+          </div>
+          <div>
+            <img src="images/icon-phone.svg" alt="">
+            <p>+1-543-123-4567</p>
+          </div>
+          <div>
+            <img src="images/icon-email.svg" alt="">
+            <p>example@huddle.com</p>
+          </div>
+        </div>
+
+        <div class="col-md-2 about-us">
+          <p>About Us</p>
+          <p>What We Do</p>
+          <p>FAQ</p>
+        </div>
+
+        <div class="col-md-2 career">
+          <p>Career</p>
+          <p>Blog</p>
+          <p>Contact Us</p>
+        </div>
+
+        <div class="col-md-2 icons">
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col copyright">
+          &copy; Copyright 2018 Huddle. All rights reserved.
+        </div>
+      </div>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://github.com/Alexrjj">Alexrjj</a>.
+      </p>
+    </div>
   </footer>
 </body>
 </html>
