Style top container and buttons

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <body class="body">
   <div class="container-fluid top-container">
     <div class="row">
-      <div class="col">
-            <img class="top-logo" src="images/logo.svg" alt="">
+      <div class="col top-logo">
+            <img src="images/logo.svg" alt="">
       </div>
-      <div class="col">
-        <button class="btn btn-primary try-it-free">Try It Free</button>
+      <div class="col try-it-free">
+        <button class="btn btn-primary">Try It Free</button>
       </div>
 
     </div>
@@ -139,7 +139,7 @@
       </div>
       <div class="row">
         <div class="col copyright">
-          &copy; Copyright 2018 Huddle. All rights reserved.
+          &copy; Copyright 2020 Huddle. All rights reserved.
         </div>
       </div>
       <p class="attribution">
