--- a/index.html
+++ b/index.html
@@ -21,16 +21,14 @@
 <body class="body">
   <div class="container-fluid top-container">
     <div class="row">
-      <div class="col top-logo">
-            <img src="images/logo.svg" alt="">
-      </div>
-      <div class="col try-it-free">
+      <div class="col-lg-12 try-it-free top-logo">
+        <img src="images/logo.svg" alt="">
         <button class="btn btn-primary">Try It Free</button>
       </div>
 
     </div>
     <div class="row">
-      <div class="col top-left-column">
+      <div class="col-md-6 top-left-column">
         <h1>Build The Community Your Fans Will Love</h1>
         <p class="intro">
           Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
@@ -38,7 +36,7 @@
         </p>
         <button class="btn btn-primary btn-get-started">Get Started For Free</button>
       </div>
-      <div class="col top-right-column">
+      <div class="col-md-6 top-right-column">
         <img src="images/illustration-mockups.svg" alt="">
       </div>
     </div>
